--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -18,12 +18,13 @@
                                 alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">$<%= product.price %></h2>
-                            <p class="product__description"><%= product.description %></p>
+                            <h2 class="product__price"><%= product.description %></h2>
+                            <p class="product__description">$<%= product.price %></p>
                         </div>
                         <div class="card__actions">
                             <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
-                            <form action="/admin/delete-product" method="post">
+                            <form action="/admin/delete-product" method="POST">
+                                <input type="hidden" value="<%= product.id %>" name="productId">
                                 <button type="submit" class="btn">Delete</button>
                             </form>
                         </div>
